feat: se implementa estructura para componentes faltantes

--- a/src/app/features/customers/customers.component.html
+++ b/src/app/features/customers/customers.component.html
@@ -141,7 +141,7 @@
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td [attr.colspan]="columns.length">
+        <td [attr.colspan]="columns.length + 1">
           <div class="pt-2 pb-2 text-center">No se encontraron registros.</div>
         </td>
       </tr>
